# nlp_lppls

./: README.md  for_prep.ipynb  hello.py  main.py  pyproject.toml  requirements.txt  residuals.json  test.py
GQLib/: AssetProcessor.py  Framework.py  MiaouFramework.py  enums.py  filterings.py  logging.py  plotter.py  subintervals.py
GQLib/Models/: LPPLS.py
GQLib/Optimizers/: CNN.py  MLNN.py  M_LNN.py  RNN.py  __init__.py  abstract_optimizer.py  base_trainer.py
GQLib/Optimizers/Neural_Network/: CNN.py  MLNN.py  NLCNN.py  RNN.py  attention.py  base_trainer.py
GQLib/Optimizers/Neural_Network/utils_nn/: lppls_nn_wrapper.py
GQLib/Plotters/: kernel_plotter.py  plotter.py
Results/results_BTC/CNN/daily/: LPPLS_01-2013_11-2017.json  (+1 more)
Results/results_WTI/: summary_errors.csv
Venise_Results/: WTI_metrics.json
archive/: assetprocessor.py  main.ipynb  test.py
nlp_results/: BTC_Set1_metrics.csv  BTC_Set1_metrics_attention.csv  BTC_Set2_metrics.csv  BTC_Set2_metrics_attention.csv  BTC_metrics.json  BTC_metrics_attention.json  SP500_Set1_metrics.csv  SP500_Set1_metrics_attention.csv  SP500_Set2_metrics.csv  SP500_Set2_metrics_attention.csv  SP500_metrics.json  SP500_metrics_attention.json  WTI_Set1_metrics.csv  WTI_Set1_metrics_attention.csv  WTI_Set2_metrics.csv  WTI_Set3_metrics.csv  WTI_Set3_metrics_attention.csv  WTI_metrics.json  WTI_metrics_attention.json
params/: config.json  debug_framework.json  lomb.json  search_space.json
params/optimizer/: cnn.json  fa.json  mcmc.json  mpga.json  nlcnn.json  pso.json  rnn.json  sa.json  sga.json  tabu.json
(+74 files in other folders)
