[project]
name = "predicting-oil-price-turning-points"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.0.2",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "tdqm>=0.0.1",
    "yfinance>=0.2.61",
]
